Use OSS 7.6.1 versions of ELK tools
- Update Dockerfiles to use `-oss` versions of images.
- Use version 7.6.1 by default
- Remove XPack configuration since it's a commercial offering.
- Update README to show this is the OS version.

--- a/extensions/apm-server/Dockerfile
+++ b/extensions/apm-server/Dockerfile
@@ -1,3 +1,4 @@
 ARG ELK_VERSION
+ARG OSS_STRING="-oss"
 
-FROM docker.elastic.co/apm/apm-server:${ELK_VERSION}
+FROM docker.elastic.co/apm/apm-server${OSS_STRING}:${ELK_VERSION}
