--- a/kibana/Dockerfile
+++ b/kibana/Dockerfile
@@ -1,7 +1,8 @@
 ARG ELK_VERSION
+ARG OSS_STRING="-oss"
 
 # https://www.docker.elastic.co/
-FROM docker.elastic.co/kibana/kibana:${ELK_VERSION}
+FROM docker.elastic.co/kibana/kibana${OSS_STRING}:${ELK_VERSION}
 
 # Add your kibana plugins setup here
 # Example: RUN kibana-plugin install <name|url>
