--- a/logstash/Dockerfile
+++ b/logstash/Dockerfile
@@ -1,7 +1,8 @@
 ARG ELK_VERSION
+ARG OSS_STRING="-oss"
 
 # https://www.docker.elastic.co/
-FROM docker.elastic.co/logstash/logstash:${ELK_VERSION}
+FROM docker.elastic.co/logstash/logstash${OSS_STRING}:${ELK_VERSION}
 
 # Add your logstash plugins setup here
 # Example: RUN logstash-plugin install logstash-filter-json
